added background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section id="topbanner">
             <div class="half-width">
                 <h1>Welcome To</h1>
                 <h1><span class="name-highlight">Jujutsu Kaisen</span> World</h1>
