finished my first ever website

--- a/index.html
+++ b/index.html
@@ -13,18 +13,53 @@
     <section id="topbanner">
             <div class="half-width">
                 <h1>Welcome To</h1>
-                <h1><span class="name-highlight">Jujutsu Kaisen</span> World</h1>
+                <h1><span class="orange-highlight">Jujutsu Kaisen</span> World</h1>
                 <h3>Best New Gen Anime Currently</h3>
                 <p>Has amazing characters like Gojo, Sukuna, Geto and many more!
                     Favourite anime of Mappa Studio and season 2 of JJK covers the famous "Shibuya Incident Arc" !! Currently airing every wednesday at 9 pm BST.
                 </p>
+                <a class="link-button" target="_blank" href="https://aniwave.to/watch/jujutsu-kaisen-2nd-season.ll3x3/ep-13">WATCH NOW</a>
         </div>
         <div class="half-width">
             <img src="images/profile.png" alt="">
         </div>
 
     </section>
+    <section class="dream-big">
+        
+        <div class="half-width">
+            <img src="images/bg.png" alt="">
+        </div>
 
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Wanna get a physique like Gojo!</h3>
+            <p>A high protein diet and proper workout plan is necessary to achieve a physique like this.Having a proper diet and disciplined workout plan for every muscle group is the key to success!!</p>
+            <a target="_blank" class="link-button" href="https://www.calculator.net/calorie-calculator.html">Calculate M. Cal.</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-exp">
+                <h2>Newbie Anime-Watcher</h2>
+                <h3 class="orange-highlight">2020-2021 | Newbie Otaku</h3>
+                <p>I started watching a few anime movies in 2020. I found them from nightcore mv thumbnails and serched out their names. Some if them included Your Name, I Want to Eat your Pancreas, Weathering With You and so on.</p>
+        </div>
+        <div id="blue" class="half-width single-exp">
+            <h2>Full Stack Anime-Watcher</h2>
+            <h3 class="orange-highlight">2021-Present | Found a SENSEI</h3>
+            <p>During this time I found the best sensei of all time, the Hamster 🐹. She took me through the jouney and recommended some awesome anime which helped me to become a full stack anime watcher.
+            For some reason she doesn't allow me to watch Unga Bunga Stray Dogs :/
+            </p>
+        </div>
+
+    </section>
+    <h2 id="hamster">PLEASE NOTE !!</h2>
+    <h3 id="hamster"> Since you're a busy hamster and you don't remember, 
+        <span id="paona">Amar Paona Akhono Baaki</span>. Paone shodh korte <a class="link-button" target="_blank" href="https://www.instagram.com/koisilam.hehe/">Click Here ;3</a> </h3>
+    <footer>
+        <p>©️ Asif Iqbal Muhin, a die-hard Paona fan.</p>
+    </footer>
 
 </body>
 </html>
