--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhins website</title>
+    <title>Muhin's website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -13,52 +13,48 @@
     <section id="topbanner">
             <div class="half-width">
                 <h1>Welcome To</h1>
-                <h1><span class="orange-highlight">Jujutsu Kaisen</span> World</h1>
-                <h3>Best New Gen Anime Currently</h3>
-                <p>Has amazing characters like Gojo, Sukuna, Geto and many more!
-                    Favourite anime of Mappa Studio and season 2 of JJK covers the famous "Shibuya Incident Arc" !! Currently airing every wednesday at 9 pm BST.
+                <h1><span class="orange-highlight">Asif Iqbal's</span> Website</h1>
+                <h3>Proffesional web developer</h3>
+                <p>You might see me playing games, listening to music and sleeping all the time. But no one pays me for that. And I wanna start earning ob my own.That's why I'm learning and mastering web developement.I will not stop untill I become a web developer Hero.
                 </p>
-                <a class="link-button" target="_blank" href="https://aniwave.to/watch/jujutsu-kaisen-2nd-season.ll3x3/ep-13">WATCH NOW</a>
+                <a class="link-button" target="_blank" href="https://www.facebook.com/asif.olindo">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/profile.png" alt="">
+            <img src="images/pfp.png" alt="">
         </div>
 
     </section>
     <section class="dream-big">
         
         <div class="half-width">
-            <img src="images/bg.png" alt="">
+            <img src="images/pfpp.png" alt="">
         </div>
 
         <div class="half-width">
             <h2>Big Dream</h2>
-            <h3>Wanna get a physique like Gojo!</h3>
-            <p>A high protein diet and proper workout plan is necessary to achieve a physique like this.Having a proper diet and disciplined workout plan for every muscle group is the key to success!!</p>
-            <a target="_blank" class="link-button" href="https://www.calculator.net/calorie-calculator.html">Calculate M. Cal.</a>
+            <h3>Become world's number one web developer.</h3>
+            <p>I already learned basic HTML and CSS. I can build any simple website.I can even teach my Amma how to make a simple website.My goal is to build 3 simple websites and learn advanced things.</p>
+            <a target="_blank" class="link-button" href="https://www.calculator.net/calorie-calculator.html">DOWNLOAD RESUME.</a>
         </div>
     </section>
     <section class="experience-area">
         <h2>Experiences</h2>
         <div id="full-stack" class="half-width single-exp">
-                <h2>Newbie Anime-Watcher</h2>
-                <h3 class="orange-highlight">2020-2021 | Newbie Otaku</h3>
-                <p>I started watching a few anime movies in 2020. I found them from nightcore mv thumbnails and serched out their names. Some if them included Your Name, I Want to Eat your Pancreas, Weathering With You and so on.</p>
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-highlight">2023-Present | Programming Hero Learner</h3>
+                <p>They didn't offer me a job.But I made a website and showed it to them and they liked it.And uploaded the content. It was fun working at Programming Hero.</p>
         </div>
         <div id="blue" class="half-width single-exp">
-            <h2>Full Stack Anime-Watcher</h2>
-            <h3 class="orange-highlight">2021-Present | Found a SENSEI</h3>
-            <p>During this time I found the best sensei of all time, the Hamster 🐹. She took me through the jouney and recommended some awesome anime which helped me to become a full stack anime watcher.
-            For some reason she doesn't allow me to watch Unga Bunga Stray Dogs :/
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlight">2023-2025? | Surely Gonna Happen In The future</h3>
+            <p>Master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient.I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know developement, server and security. I will give you 100% web solution.
             </p>
         </div>
 
     </section>
-    <h2 id="hamster">PLEASE NOTE !!</h2>
-    <h3 id="hamster"> Since you're a busy hamster and you don't remember, 
-        <span id="paona">Amar Paona Akhono Baaki</span>. Paone shodh korte <a class="link-button" target="_blank" href="https://www.instagram.com/koisilam.hehe/">Click Here ;3</a> </h3>
+    
     <footer>
-        <p>©️ Asif Iqbal Muhin, a die-hard Paona fan.</p>
+        <p>©️ Asif Iqbal Muhin, a Programming Hero initiative.</p>
     </footer>
 
 </body>
